# nextmail

./: Cargo.toml  README.md  components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
crates/nextmail-core/: Cargo.toml
crates/nextmail-core/src/: lib.rs  ports.rs  types.rs
crates/nextmail-protocols/: Cargo.toml
crates/nextmail-protocols/src/: compose.rs  html.rs  imap.rs  lib.rs
crates/nextmail-storage/: Cargo.toml
crates/nextmail-storage/migrations/: 0001_bootstrap.sql  0003_message_encodings.sql  0004_compose_and_send.sql  0005_complete_imap_sync.sql  0007_html_style_fidelity.sql
crates/nextmail-storage/src/: content_store.rs  draft_repository.rs  lib.rs  operation_repository.rs  repository.rs
docs/: README.md  architecture.md  development.md  handoff-claude.txt  refactor-suggestions.md  technical-reference.md  third-party-notices.md  第六阶段新对话提示词.txt
docs/adr/: 0001-cargo-workspace-boundaries.md  0002-safe-mail-rendering.md  0003-durable-send-pipeline.md  0004-durable-imap-operation-queue.md  0005-platform-window-chrome.md  0006-single-tauri-rust-crate.md  0007-multi-account-runtime-and-credentials.md  0008-mail-rendering-fidelity-boundary.md  0009-composer-source-html-and-inline-images.md  0010-local-message-search.md  0011-inline-cid-reading.md  0012-controlled-desktop-notification-windows.md  0013-explicit-account-sync-scheduling.md
docs/changes/: 0001-onboarding.md  0002-ui-architecture-and-onboarding.md  0003-rustls-crypto-provider.md  0004-imap-local-reading-core.md  0005-message-and-mailbox-encoding.md  0006-rfc2047-robustness.md  0007-compose-drafts-smtp.md  0008-composer-ui-and-reader-fixes.md  0009-mail-list-and-compose-polish.md  0010-draft-delete-and-list-alignment.md  0011-complete-imap-sync.md  0012-sync-and-mail-workspace-polish.md  0013-composer-send-progress-and-close.md  0014-reader-spacing-and-phase-4-acceptance.md  0015-saas-ui-refactor.md  0016-ui-refactor-regressions.md  0017-settings-window-lifecycle-fix.md  0018-sidebar-actions-and-resize-affordance.md  0019-desktop-polish-and-local-send-time.md  0020-folder-tree-reader-preferences-and-ui-fixes.md  0021-mailbox-tree-scrollbar-and-list-date.md  0022-windows-cjk-typography-calibration.md  0023-startup-responsive-progressive-sync.md  0024-single-tauri-rust-crate.md  0025-multi-account.md  0026-system-font-and-attachment-experience.md  0027-theme-color-palette.md  0028-refactor-p0-hardening.md  0029-refactor-p1-rust-layering.md  0030-project-documentation-and-handoff.md  0031-frontend-state-and-workspace-structure.md  0032-roadmap-reprioritization.md  0033-template-and-signature-library.md  0034-application-icon-assets.md  0035-composition-scene-rules.md  0036-mail-rendering-security-corpus.md  0037-html-css-fidelity-and-dark-reading.md  0038-direct-external-links-and-layout-fidelity.md  0039-complete-html-reply-and-forward.md  0040-local-message-search.md  (+10 more)
docs/iterations/: 0001-onboarding.md  0002-imap-local-reading.md  0003-compose-drafts-smtp.md  0004-complete-imap-sync.md  0005-saas-ui-refactor.md  0006-multi-account.md  0007-font-and-attachment-experience.md  0008-refactor-hardening.md  0009-templates-and-signatures.md  0010-mail-reading-and-reply-experience.md  0011-search-conversations-and-desktop.md  0012-experience-optimization.md  0013-signatures-account-management-notifications.md  0014-sync-and-composer-experience-corrections.md
docs/plans/: master-plan.md  next-implementation.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: composer.json  default.json  notification.json  settings.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0002_imap_reading.sql  0006_reply_forward.sql  0008_template_signature_library.sql  0009_composition_scene_rules.sql  0010_html_stylesheet_and_theme_fidelity.sql  0011_controlled_mail_links.sql  0012_direct_mail_links_and_layout_fidelity.sql  0013_composer_inline_images.sql  0014_functional_selector_fidelity.sql  0015_local_message_search.sql  0016_stage12_experience.sql  0017_signature_preferences.sql  0018_notification_baseline.sql  0019_account_sync_interval.sql
src-tauri/src/: composer_runtime.rs  error.rs  lib.rs  mail_runtime.rs  main.rs  notification_runtime.rs  state.rs
src-tauri/src/adapters/: attachment_opener.rs  credentials.rs  discovery.rs  link_opener.rs  mail_connection.rs  mod.rs  sqlite.rs  storage.rs
src-tauri/src/application/: composition_definitions.rs  message_composer.rs  mod.rs  service.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/core/: error.rs  ports.rs  types.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/protocols/: compose.rs  css.rs  html.rs  imap.rs  links.rs  mod.rs  tls.rs
src-tauri/src/protocols/imap/: encoding.rs  parse.rs  policy.rs  session.rs
src-tauri/src/storage/: account_repository.rs  composition_definition_repository.rs  content_store.rs  draft_repository.rs  mailbox_role_repository.rs  mod.rs  operation_repository.rs  repository.rs
src/app/: App.tsx  api.ts  appearance-query.test.tsx  appearance.test.ts  appearance.ts  i18n.ts  platform.test.ts  platform.ts  startup.test.ts  startup.ts  types.ts
src/components/ui/: alert.tsx  button.tsx  card.tsx  checkbox.tsx  compact-field.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  empty-state.tsx  icon-tile.tsx  (+16 more)
src/styles/: base.css  composer.css  globals.css  theme.css
src/test/: setup.ts
testdata/mail-rendering/: flex-invoice-table.html  links-and-remote-resources.html  malicious-active-content.html  manifest.json  marketing-responsive.html  mixed-background-table.html  native-dark.html  plain-unstyled.html  transactional-table.html
(+65 files in other folders)
