[workspace]
members = [
    "crates/nextmail-core",
    "crates/nextmail-protocols",
    "crates/nextmail-storage",
    "src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["serde", "v4"] }
