[package]
name = "nextmail-protocols"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ammonia = "4"
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
async-trait.workspace = true
futures-util = "0.3"
base64 = "0.22"
mail-parser = { version = "0.11", features = ["full_encoding"] }
mail-builder = "0.4"
nextmail-core = { path = "../nextmail-core" }
rustls = { version = "0.23", default-features = false, features = ["logging", "ring", "std", "tls12"] }
rustls-native-certs = "0.8"
tokio.workspace = true
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "ring", "tls12"] }
